@@ -1,4 +1,9 @@
 2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
+	* Makefile.am: Install files COPYING, ChangeLog, AUTHORS, NEWS,
+	README, and TODO in the doc directory.
+	* doc/Makefile.am: Install bbdb.pdf in the doc directory.
+
+2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
 	* m4/package_date.m4: Use "date -u" if "date --rfc-3339" fails.
 
 2014-02-28  Roland Winkler  <winkler@gnu.org>
